Xullas tugagani shu bo'lsin

--- a/deTailedPage.html
+++ b/deTailedPage.html
@@ -25,7 +25,7 @@
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="./inDex.html" class="site-navbar__list-link">Главная странитца</a>
+            <a href="./inDex.html" class="site-navbar__list-link">Главная страница</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
