--- a/internal.html
+++ b/internal.html
@@ -24,7 +24,7 @@
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="./inDex.html" class="site-navbar__list-link">Главная странитца</a>
+            <a href="./inDex.html" class="site-navbar__list-link">Главная страница</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
@@ -73,8 +73,8 @@
             <input type="number" id="tel" placeholder="90 123 45 67" maxlength="13">
             <label for="date">Время уборки</label>
             <input type="datetime-local" id="date" placeholder="12.12.1212">
-            <label for="commint">каминтария</label>
-            <input type="text" id="commint" placeholder="каминт">
+            <label for="commint">Комментарии</label>
+            <input type="text" id="commint" placeholder="Коммент">
             <button class="servicePage-list__item-link" id="modal-btn__zakaz">Заказать</button>
           </form>
         </div>
