--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -23,7 +23,7 @@
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a id="1" href="./index.html" class="site-navbar__list-link">Главная странитца</a>
+            <a id="1" href="./index.html" class="site-navbar__list-link">Главная страница</a>
           </li>
           <li class="site-navbar__list-item">
             <a id="2" href="#footer-id" class="site-navbar__list-link">Контакт</a>
