--- a/deTailedPage.html
+++ b/deTailedPage.html
@@ -97,7 +97,7 @@
                 <h4>Cтраницы</h4>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="./index.html">Главная странитца</a>
+                <a class="footer-list__pages-link" href="./index.html">Главная страница</a>
               </li>
               <li class="footer-list__list-item">
                 <a class="footer-list__pages-link" href="#footer-id">Контакт</a>
