--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
                 <h3 class="service-list__title">
                   Уборка внутри дома
                 </h3>
-                <a class="service-list__link" href="./internal.html"><span>в деталях</span> <i class="fas fa-right-to-bracket"></i></a>
+                <a class="service-list__link" href="./internal.html"><span>Категории</span> <i class="fas fa-right-to-bracket"></i></a>
               </li>
               <li class="service-list__item">
                 <img src="./img/tashqi.jpg" alt="">
                 <h3 class="service-list__title">
                   Уборка с наружы
                 </h3>
-                <a class="service-list__link" href="./external.html"><span>в деталях</span> <i class="fas fa-right-to-bracket"></i></a>
+                <a class="service-list__link" href="./external.html"><span>Категории</span> <i class="fas fa-right-to-bracket"></i></a>
               </li>
             </ul>
           </div>
@@ -134,7 +134,7 @@
                 <h4>Cтраницы</h4>
               </li>
               <li class="footer-list__list-item">
-                <a class="footer-list__pages-link" href="./index.html">Главная странитца</a>
+                <a class="footer-list__pages-link" href="./index.html">Главная страница</a>
               </li>
               <li class="footer-list__list-item">
                 <a class="footer-list__pages-link" href="#footer-id">Контакт</a>
