--- a/index.html
+++ b/index.html
@@ -109,22 +109,13 @@
             </p>
             <ul class="footer-contact__list">
               <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://facebook.com" target="_blank"><i class="brend-icon__item fa-brands fa-facebook-f"></i></a>
+                <a class="brend-icon" href="https://www.facebook.com/profile.php?id=100086475263196" target="_blank"><i class="brend-icon__item fa-brands fa-facebook-f"></i></a>
               </li>
               <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://twitter.com" target="_blank"><i class="brend-icon__item fa-brands fa-twitter"></i></a>
+                <a class="brend-icon" href=https://t.me/NOMER_1_UBORKA" target="_blank"><i class="brend-icon__item fa-brands fa-telegram"></i></a>
               </li>
               <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://www.youtube.com/" target="_blank"><i class="brend-icon__item fa-brands fa-youtube"></i></i></a>
-              </li>
-              <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://web.telegram.org" target="_blank"><i class="brend-icon__item fa-brands fa-telegram"></i></a>
-              </li>
-              <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://www.instagram.com" target="_blank"><i class="brend-icon__item fa-brands fa-instagram"></i></a>
-              </li>
-              <li class="footer-contact__list-item">
-                <a class="brend-icon" href="https://ru.linkedin.com" target="_blank"><i class="brend-icon__item fa-brands fa-linkedin-in"></i></a>
+                <a class="brend-icon" href="https://www.instagram.com/nomer_1_uborka" target="_blank"><i class="brend-icon__item fa-brands fa-instagram"></i></a>
               </li>
             </ul>
           </li>
