--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -54,11 +54,9 @@
             Чистый дом
           </span>
         </h1>
-        <p class="company-desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sequi consequuntur delectus fuga nam iusto, corporis nobis, accusamus voluptatum quo laborum. Odio reiciendis voluptatem dicta atque vel soluta, nisi asperiores, quibusdam commodi incidunt eius! Ad nihil, cumque beatae aliquam, dicta inventore voluptates delectus ab, necessitatibus enim architecto soluta magni hic esse error quos dolorem quasi iste repellat? Libero voluptatum sint ipsum repellat est veniam accusantium quaerat mollitia, maiores voluptate cum esse odit molestias? Modi quas rem maiores! Rerum possimus iusto sapiente minus inventore sequi, accusantium explicabo nobis saepe esse, earum dolor optio totam reiciendis nulla aperiam hic, doloribus ex eos!
-        </p>
+        <p class="company-desc"></p>
         <a href="tel:+998971644994" class="company-location"><i class="fas fa-phone"></i><span> +998 97 164 49 94</span></a>
-        <span class="company-adress">Бектимирский раён улица Бектимир шох кочаси.</span>
+        <span class="company-adress"><i class="fas fa-location-dot"></i><span>Бектимирский раён улица Бектимир шох кочаси.</span></span>
         <iframe class="company-maps" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3001.266386503971!2d69.334126!3d41.215965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDEyJzU3LjUiTiA2OcKwMjAnMDIuOSJF!5e0!3m2!1sru!2s!4v1668019627106!5m2!1sru!2s"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
