--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -76,11 +76,12 @@
                 <a class="brend-icon" href="https://www.facebook.com/profile.php?id=100086475263196" target="_blank"><i class="brend-icon__item fa-brands fa-facebook-f"></i></a>
               </li>
               <li class="footer-contact__list-item">
-                <a class="brend-icon" href=https://t.me/NOMER_1_UBORKA" target="_blank"><i class="brend-icon__item fa-brands fa-telegram"></i></a>
+                <a class="brend-icon" href="https://telegram.me/NOMER_1_UBORKA" target="_blank"><i class="brend-icon__item fa-brands fa-telegram"></i></a>
               </li>
               <li class="footer-contact__list-item">
                 <a class="brend-icon" href="https://www.instagram.com/nomer_1_uborka" target="_blank"><i class="brend-icon__item fa-brands fa-instagram"></i></a>
               </li>
+              
             </ul>
           </li>
           <li class="footer-menu__list-item">
