--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -54,7 +54,28 @@
             Чистый дом
           </span>
         </h1>
-        <p class="company-desc"></p>
+        <p class="company-desc">
+          Компания «Чистый Дом» работает на рынке сервисного клининговых обслуживания с 2020 года и уже успела завоевать отличные отзывы о своей работе и доверие многих клиентов. По нашей статистике, более 80% клиентов, однажды обратившись к нашим специалистам, начинают пользоваться их услугами на постоянной основе.
+          <br>
+Мы специализируемся на высококачественной профессиональной уборке помещений разного типа, зданий и прилегающих к ним территорий.
+<br><br>
+Отличительные особенности нашей деятельности:
+<br><br>
+индивидуальный подход;
+<br><br>
+выполнение всех обязательств;
+<br><br>
+высокий профессионализм и эстетичный внешний вид сотрудников;
+<br><br>
+соблюдение всех санитарно-гигиенических норм и требований клиента;
+<br><br>
+применение профессионального оборудования и специализированных чистящих и моющих средство;
+<br><br>
+бережное отношение к имуществу клиентов;
+<br><br>
+доступные цены на все виды услуг.
+Обратившись в компанию «Чистый Дом» Вы гарантированно получаете высокий сервис обслуживания и отличный результат, не прилагая к этому никаких усилий. Экономьте время и средства вместе с нами!
+        </p>
         <a href="tel:+998971644994" class="company-location"><i class="fas fa-phone"></i><span> +998 97 164 49 94</span></a>
         <span class="company-adress"><i class="fas fa-location-dot"></i><span>Бектимирский раён улица "Бектимир шох кучаси".</span></span>
         <iframe class="company-maps" src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3001.266386503971!2d69.334126!3d41.215965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDEyJzU3LjUiTiA2OcKwMjAnMDIuOSJF!5e0!3m2!1sru!2s!4v1668019627106!5m2!1sru!2s"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
