--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./inDex.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
+        <a href="./index.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="./inDex.html" class="site-navbar__list-link">Главная страница</a>
+            <a href="./index.html" class="site-navbar__list-link">Главная страница</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
@@ -89,7 +89,7 @@
                 <h3 class="service-list__title">
                   Уборка с наружы
                 </h3>
-                <a class="service-list__link" href="./external.html"><span>Категории</span> <i class="fas fa-right-to-bracket"></i></a>
+                <a class="service-list__link" href="./exTernal.html"><span>Категории</span> <i class="fas fa-right-to-bracket"></i></a>
               </li>
             </ul>
           </div>
