--- a/internal.html
+++ b/internal.html
@@ -20,11 +20,11 @@
     <div class="container">
       <nav class="site-navbar">
 
-        <a href="./inDex.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
+        <a href="./index.html" class="site-logo"><img src="./img/logo.png" alt="Чистый дом"></a>
 
         <ul class="site__navbar-list">
           <li class="site-navbar__list-item">
-            <a href="./inDex.html" class="site-navbar__list-link">Главная страница</a>
+            <a href="./index.html" class="site-navbar__list-link">Главная страница</a>
           </li>
           <li class="site-navbar__list-item">
             <a href="#footer-id" class="site-navbar__list-link">Контакт</a>
@@ -107,7 +107,7 @@
       <div class="footer__box">
         <ul class="footer-list">
           <li class="footer-menu__list-item">
-            <p class="footer-logo" href="./index.html">Чистота вместе <br> с нами !!!</p>
+            <p class="footer-logo">Чистота вместе <br> с нами !!!</p>
             <p class="footer-text">
               Подписывайтесь на нас
             </p>
@@ -158,7 +158,6 @@
 
   <script src="./js/header.js"></script>
   <script src="./js/internal.js"></script>
-  <!-- <script src="./js/modal.js"></script> -->
 
 </body>
 </html>
